# bioamla

./: .env-example  .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  TODO.md  bioamla_magpy_unified_development_plan.md  esc50_example.sh  metadata.csv  mkdocs.yml  pyproject.toml  test_audio_editor.py  test_magpy.py
.claude/skills/catalog-smoke/: SKILL.md  smoke.sh
.claude/skills/run-bioamla/: SKILL.md  smoke.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: api-start.md  cli-start.md  cli.md
docs/api/: audio.md  batch.md  catalogs.md  cluster.md  datasets.md  detect.md  exceptions.md  indices.md  ml.md  viz.md
docs/source/: conf.py  index.rst
docs/source/modules/: bioamla.rst  cli.rst  core.rst
examples/: 01_catalog_to_model.sh  02_hf_dataset_curate_and_train.sh  02_hf_dataset_to_model.sh  02_hf_dataset_train_ast.sh  03_hf_dataset_curate_and_train.sh  03_soundscape_analysis.sh  04_embedding_clustering.sh  04_soundscape_analysis.sh  05_embedding_clustering.sh  05_grab_and_go.sh  06_inat_clip_inference.sh  README.md  esc50_ast_inference.sh  esc50_ast_train.sh  inat_workflow.sh  scp_frogs_ast_inference.sh  scp_frogs_ast_train.sh
examples/dev_data/test1/: metadata.csv
scp_frogs_eval/: LICENSE  output.csv
scripts/: install-deps.sh
src/bioamla/: __init__.py  _cli_entry.py  active_learning.py  analysis.py  annotations.py  ast.py  augment.py  base_api.py  batch.py  cli.py  clustering.py  command_log.py  compression_utils.py  config.py  datasets.py  detection.py  device.py  evaluate.py  exceptions.py  explore.py  fileutils.py  globals.py  inat.py  indices.py  inference.py  integrations.py  license.py  macaulay.py  metadata.py  ml.py  playback_utils.py  progress.py  project.py  realtime.py  scp_example.sh  signal.py  species.py  torchaudio.py  training.py  tui.py  (+5 more)
src/bioamla/adapters/: __init__.py
src/bioamla/api/: __init__.py  base.py  macaulay.py  species.py  xeno_canto.py
src/bioamla/audio/: __init__.py  _pydub.py  analysis.py  augment.py  batch.py  convert.py  data.py  discovery.py  info.py  io.py  playback.py  processing.py  signal.py  torchaudio.py
src/bioamla/catalogs/: __init__.py  _metadata.py  _models.py  batch.py  ebird.py  huggingface.py  inat.py  macaulay.py  species.py  xeno_canto.py
src/bioamla/cli/: ast.py  ast_batch_inference.py  ast_finetune.py  ast_predict.py  audio.py  batch_options.py  cli.py  console.py  diag.py  errors.py  extract.py  factory.py  gpu.py  logging_setup.py  options.py  progress.py  service_helpers.py  template.py  zip.py
src/bioamla/cluster/: __init__.py  batch.py  (+2 more)
tests/: __init__.py  conftest.py
tests/adapters/: __init__.py  test_cnn.py  test_models.py  test_opensoundscape.py  test_preprocessing.py  test_ribbit.py
tests/audio/: test_analysis.py  test_audio.py  test_audio_batch.py  test_data.py  test_info.py  test_io.py  test_playback.py  test_pydub.py  test_torchaudio.py
tests/batch/: _helpers.py  test_convert.py  test_csv.py  test_run_batch.py
tests/benchmarks/: __init__.py  test_audio_benchmarks.py
tests/catalogs/: test_catalogs_batch.py  test_ebird.py  test_huggingface.py  test_inat.py  test_inat_coverage.py  test_macaulay.py  test_models.py  test_species.py  test_xeno_canto.py
tests/cli/: test_cli_annotation.py  test_cli_audio.py  test_cli_batch.py  test_cli_catalogs.py  test_cli_cluster.py  test_cli_config.py  test_cli_console.py  test_cli_dataset.py  test_cli_detect.py  test_cli_indices.py  test_cli_logging_setup.py  test_cli_main.py  test_cli_models.py  test_cli_progress.py  test_cli_system.py  test_cli_util.py
tests/cluster/: test_cluster.py  test_core.py
tests/common/: test_common_config.py  test_common_files.py  test_common_http.py  test_common_progress.py
tests/controllers/: __init__.py  conftest.py  test_annotation.py  test_audio.py  test_audio_file.py  test_audio_transform.py  test_base.py  test_clustering.py  test_embedding.py  test_inaturalist.py  test_indices.py  test_inference.py  test_pipeline.py  test_project.py  test_ribbit.py  test_workflow.py
tests/datasets/: test_annotations.py  test_attributions_cli.py  test_augmentation.py  test_dataset_push.py  test_datasets.py  test_datasets_batch.py  test_generate_frame_labels_cli.py  test_labeled_dataset.py  test_licenses.py  test_manifest.py  test_measurements.py  test_merge.py  test_metadata.py  test_partition.py  test_predictions_to_annotations.py  test_traceability_e2e.py
tests/detect/: test_detect.py
tests/indices/: test_indices.py
tests/integration/: __init__.py  test_cli.py  test_project_cli.py
tests/ml/: test_ast.py  test_ast_model.py  test_ast_service.py  test_base.py  test_device.py  test_embedding.py  test_inference.py  test_ml.py  test_ml_batch.py  test_preprocessing.py  test_train_config.py  test_train_split.py  test_training.py
tests/mocks/: __init__.py  mock_repository.py
tests/services/: conftest.py  test_audio_transform.py  test_batch.py  test_cnn.py  test_detection.py  test_indices.py
tests/system/: test_system_config.py  test_system_dependency.py  test_system_util.py
tests/unit/: __init__.py  test_active_learning.py  test_analysis.py  test_annotations.py  test_api.py  test_ast.py  test_augment.py  test_cli_ast_batch_inference.py  test_cli_ast_finetune.py  test_cli_augment.py  test_cli_config_deps.py  test_cli_convert.py  test_cli_detect.py  test_cli_download.py  test_cli_evaluate.py  test_cli_examples.py  test_cli_license.py  test_cli_purge.py  test_cli_signal.py  test_cli_visualize.py  test_clustering.py  test_command_log.py  test_config.py  test_convert.py  test_datasets.py  test_deps.py  test_detection.py  test_device.py  test_evaluate.py  test_explore.py  test_fileutils.py  test_inat.py  test_indices.py  test_integrations.py  test_license.py  test_metadata.py  test_ml.py  test_models.py  test_project.py  test_realtime.py  (+5 more)
tests/viz/: test_viz.py  test_viz_batch.py  test_viz_core.py
(+459 files in other folders)
