[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bioamla"
version = "0.1.8"
authors = [
  { name="John McMeen", email="johnmcmeen@gmail.com" },
]
description = "Bioacoustics & Machine Learning Applications"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "click",
  "rich",
  "tomli>=2.0; python_version < '3.11'",
  "torch",
  "torchvision",
  "torchaudio",
  "transformers[torch]",
  "datasets[audio]",
  "audiomentations",
  "evaluate",
  "pydantic>=2.0",
  "pydub",
  "soundfile",
  "textual",
  "matplotlib",
  "scipy",
  "librosa",
  "pyinaturalist",
  "umap-learn>=0.5.0",
  "hdbscan>=0.8.0",
  "scikit-learn>=1.0.0",
  "sounddevice>=0.4.0",
  "requests>=2.28.0",
  "onnx>=1.14.0",
  "opensoundscape>=0.12.0",
  "bioacoustics-model-zoo>=0.8.0",
  "ai-edge-litert>=1.0.0",
  "tensorflow>=2.15.0",
  "tf-keras>=2.15.0",
  "timm>=1.0.0",
]

[project.scripts]
bioamla = "bioamla.cli:cli"
magpy-lite = "bioamla.tui:main"

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov",
  "pytest-mock",
  "pytest-asyncio",
  "pytest-benchmark>=4.0",
  "ruff",
  "build",
  "twine",
]
docs = [
  "sphinx>=7.0",
]
mlflow = [
  "mlflow>=2.0",
]
all = [
  "pytest>=7.0",
  "pytest-cov",
  "pytest-mock",
  "pytest-asyncio",
  "pytest-benchmark>=4.0",
  "ruff",
  "build",
  "twine",
  "mlflow>=2.0",
  "sphinx>=7.0",
]

[project.urls]
Homepage = "https://github.com/jmcmeen/bioamla"

[tool.hatch.build.targets.wheel]
packages = ["src/bioamla"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build]
include = [
  "src/bioamla/**/*.py",
  "src/bioamla/_internal/examples/*.sh",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
  "-v",
  "--tb=short",
  "--strict-markers",
]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: marks tests as integration tests",
  "requires_cuda: marks tests that require CUDA",
  "benchmark: marks tests as benchmarks (run with pytest --benchmark-only)",
]

[tool.coverage.run]
source = ["src/bioamla"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
]

[tool.ruff]
target-version = "py38"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",      # pycodestyle errors
  "W",      # pycodestyle warnings
  "F",      # Pyflakes
  "I",      # isort
  "B",      # flake8-bugbear
  "C4",     # flake8-comprehensions
  "UP",     # pyupgrade
]
ignore = [
  "E501",   # line too long (handled by formatter)
  "B008",   # do not perform function calls in argument defaults
  "C901",   # too complex
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # allow assert statements in tests

[tool.ruff.lint.isort]
known-first-party = ["bioamla"]
