[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bioamla"
version = "0.2.0"
authors = [
  { name="John McMeen", email="johnmcmeen@gmail.com" },
]
description = "Bioacoustics & Machine Learning Applications"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
# Slim core: lightweight audio / signal / indices / catalogs / CLI.
# Heavy ML and other optional capabilities live in extras below.
dependencies = [
  "click",
  "rich",
  "tomli>=2.0; python_version < '3.11'",
  "pydantic>=2.0",
  "numpy",
  "scipy",
  "numba",
  "pandas",
  "librosa",
  "soundfile",
  "pydub",
  "matplotlib",
  "requests>=2.28.0",
  "huggingface_hub",
  "pyinaturalist",
  "python-dotenv>=1.0",
]

[project.scripts]
bioamla = "bioamla.cli.cli:main"

[project.optional-dependencies]
# AST inference / training / embeddings (PyTorch + HuggingFace stack)
ml = [
  "torch",
  "torchvision",
  "torchaudio",
  "transformers[torch]",
  "datasets[audio]",
  "audiomentations",
  "evaluate",
]
# OpenSoundscape-backed detectors (e.g. ribbit)
detect = [
  "opensoundscape>=0.12.0",
]
# Embedding clustering / dimensionality reduction
cluster = [
  "umap-learn>=0.5.0",
  "hdbscan>=0.8.0",
  "scikit-learn>=1.0.0",
]
# Local audio playback
playback = [
  "sounddevice>=0.4.0",
]
# All runtime capabilities (no dev/test tooling)
all = [
  "torch",
  "torchvision",
  "torchaudio",
  "transformers[torch]",
  "datasets[audio]",
  "audiomentations",
  "evaluate",
  "opensoundscape>=0.12.0",
  "umap-learn>=0.5.0",
  "hdbscan>=0.8.0",
  "scikit-learn>=1.0.0",
  "sounddevice>=0.4.0",
]
dev = [
  "pytest>=7.0",
  "pytest-cov",
  "pytest-mock",
  "pytest-asyncio",
  "pytest-benchmark>=4.0",
  "ruff",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.26",
]
mlflow = [
  "mlflow>=2.0",
]

[project.urls]
Homepage = "https://github.com/jmcmeen/bioamla"

[tool.hatch.build.targets.wheel]
packages = ["src/bioamla"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build]
include = [
  "src/bioamla/**/*.py",
  "src/bioamla/_internal/examples/*.sh",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
  "-v",
  "--tb=short",
  "--strict-markers",
]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: marks tests as integration tests",
  "requires_cuda: marks tests that require CUDA",
  "benchmark: marks tests as benchmarks (run with pytest --benchmark-only)",
]

[tool.coverage.run]
source = ["src/bioamla"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",      # pycodestyle errors
  "W",      # pycodestyle warnings
  "F",      # Pyflakes
  "I",      # isort
  "B",      # flake8-bugbear
  "C4",     # flake8-comprehensions
  "UP",     # pyupgrade
]
ignore = [
  "E501",   # line too long (handled by formatter)
  "B008",   # do not perform function calls in argument defaults
  "C901",   # too complex
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # allow assert statements in tests

[tool.ruff.lint.isort]
known-first-party = ["bioamla"]
