[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "bioamla"
dynamic = ["version"]
authors = [
  { name="John McMeen", email="johnmcmeen@gmail.com" },
]
description = "Bioacoustics & Machine Learning Applications"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Environment :: Console",
]

dependencies = [
  "tomli>=2.0; python_version < '3.11'",
  "python-dotenv>=1.0",
  "numpy",
  "scipy",
  "numba",
  "pandas",
  "pyarrow",
  "librosa",
  "soundfile",
  "pydub",
  "matplotlib",
  "requests>=2.28.0",
  "huggingface_hub",
  "pyinaturalist",
  "torch",
  "torchvision",
  "torchaudio",
  "transformers[torch]>=5.10.2",  # AST checkpoint key-conversion (old MIT ckpt -> new modular AST)
  "datasets[audio]",
  "audiomentations",
  "evaluate",
  "tensorboard",
  "umap-learn>=0.5.0",
  "hdbscan>=0.8.0",
  "scikit-learn>=1.0.0",
  "sounddevice>=0.4.0",
  "mlflow>=2.0",
]

[project.scripts]
bioamla = "bioamla._cli_entry:main"

[project.optional-dependencies]
# The command-line interface. The library itself (`import bioamla`) does not need
# these — only the `bioamla` console command does. Install with
# `pip install bioamla[cli]` to get the CLI.
cli = [
  "click",
  "rich",
]
dev = [
  "bioamla[cli]",  # the test suite exercises the CLI, so dev pulls in the cli extra
  "pytest>=7.0",
  "pytest-cov",
  "pytest-mock",
  "pytest-asyncio",
  "pytest-benchmark>=4.0",
  "ruff",
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.26",
  "mkdocs-click>=0.8",
]

[project.urls]
Homepage = "https://github.com/jmcmeen/bioamla"
Documentation = "https://jmcmeen.github.io/bioamla"
Source = "https://github.com/jmcmeen/bioamla"
Changelog = "https://github.com/jmcmeen/bioamla/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/jmcmeen/bioamla/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/bioamla"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build]
include = [
  "src/bioamla/**/*.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
  "-v",
  "--tb=short",
  "--strict-markers",
]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: marks tests as integration tests",
  "requires_cuda: marks tests that require CUDA",
  "benchmark: marks tests as benchmarks (run with pytest --benchmark-only)",
]

[tool.coverage.run]
source = ["src/bioamla"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",      # pycodestyle errors
  "W",      # pycodestyle warnings
  "F",      # Pyflakes
  "I",      # isort
  "B",      # flake8-bugbear
  "C4",     # flake8-comprehensions
  "UP",     # pyupgrade
]
ignore = [
  "E501",   # line too long (handled by formatter)
  "B008",   # do not perform function calls in argument defaults
  "C901",   # too complex
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011", "E402"]  # allow assert statements; allow imports after pytest.importorskip

[tool.ruff.lint.isort]
known-first-party = ["bioamla"]
